--- a/notebooks/02_eda.ipynb
+++ b/notebooks/02_eda.ipynb
@@ -32,6 +32,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e540c907",
+   "metadata": {},
+   "source": [
+    "Gráfca 1: Heatmap ”Número de noticias por día de la semana y\n",
+    "semana del año”\n",
+    "Características:\n",
+    "• Tipo: Heatmap/mapa de calor\n",
+    "• Estructura: Matriz semanas (1-52) × días de semana\n",
+    "• Paleta de colores: YlGnBu (amarillo-verde-azul)\n",
+    "• Propósito: Visualizar distribución temporal de noticias\n",
+    "Análisis detallado:\n",
+    "• Patrón semanal (por columnas):\n",
+    "– Lunes a viernes: Alta densidad de noticias (colores azul oscuro)\n",
+    "– Sábado y domingo: Notable disminución (colores amarillos/verdes claros)\n",
+    "– Pico máximo: Miércoles y jueves muestran la mayor intensidad\n",
+    "– Día más bajo: Domingo consistentemente muestra menor actividad\n",
+    "Patrón anual (por flas):\n",
+    "– Semanas 1-10: Actividad moderada con algunos picos\n",
+    "– Semanas 10-20: Período de alta densidad noticiosa\n",
+    "– Semanas 20-30: Actividad más variable con algunos valles\n",
+    "– Semanas 30-40: Segundo período de alta concentración\n",
+    "– Semanas 40-52: Disminución gradual hacia fn de año\n",
+    "Puntos destacados:\n",
+    "– Semanas 15-18: Máxima concentración anual\n",
+    "– Semanas 32-35: Segundo pico importante\n",
+    "– Patrón cíclico sugiere estacionalidad en noticias fnancieras\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "60997cc9",
@@ -62,6 +92,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b33e88f8",
+   "metadata": {},
+   "source": [
+    "Gráfca 2: Countplot ”Distribución de etiquetas”\n",
+    "Características:\n",
+    "• Tipo: Gráfco de barras vertical\n",
+    "• Eje X: Categorías de etiquetas (0 y 1)\n",
+    "• Eje Y: Frecuencia/conteo\n",
+    "• Propósito: Mostrar balance de clases\n",
+    "Análisis detallado:\n",
+    "Balance del dataset:\n",
+    "– Distribución: Notablemente equilibrada entre clases\n",
+    "– Diferencia: Menor al 10% entre categorías\n",
+    "– Implicaciones: Ideal para modelos de clasifcación sin técnicas de balanceo\n",
+    "Estadísticas observadas:\n",
+    "– Clase mayoritaria: 1100-1200 instancias\n",
+    "– Clase minoritaria: 1000-1100 instancias\n",
+    "– Ratio: Cercano a 1:1, excelente para entrenamiento\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "73cceaf4",
@@ -83,6 +135,33 @@
     "sns.countplot(x='Label', data=df)\n",
     "plt.title(\"Distribución de etiquetas\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ea1945c",
+   "metadata": {},
+   "source": [
+    "Gráfca 3: Serie temporal ”Volumen de noticias por fecha”\n",
+    "Características:\n",
+    "• Tipo: Línea temporal\n",
+    "• Eje X: Fecha (2008-2016)\n",
+    "• Eje Y: Cantidad de noticias\n",
+    "• Propósito: Evolución del volumen noticioso en el tiempo\n",
+    "Análisis detallado:\n",
+    "Tendencia general:\n",
+    "– 2008-2009: Volumen moderado con picos\n",
+    "– 2010-2012: Incremento gradual\n",
+    "– 2013-2014: Máxima densidad\n",
+    "– 2015-2016: Ligera disminución pero alta actividad\n",
+    "• Eventos destacados:\n",
+    "– 2008-2009: Picos coincidentes con crisis fnanciera global\n",
+    "– 2011: Notable aumento por eventos económicos\n",
+    "– 2013: Pico máximo\n",
+    "– 2015-2016: Estabilización en niveles altos\n",
+    "Patrones estacionales:\n",
+    "– Variabilidad intra-anual consistente\n",
+    "– Picos regulares sugieren ciclos económicos\n"
    ]
   },
   {
@@ -115,6 +194,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d3e1de8",
+   "metadata": {},
+   "source": [
+    "Gráfca 4: Word Frequency ”Top palabras más comunes”\n",
+    "Características:\n",
+    "• Tipo: Gráfco de barras horizontales\n",
+    "• Eje Y: Palabras más frecuentes\n",
+    "• Eje X: Frecuencia de aparición\n",
+    "• Propósito: Identifcar términos dominantes en el corpus\n",
+    "Análisis detallado:\n",
+    "Palabras más frecuentes:\n",
+    "– Compañía/Corporación: 4250 apariciones\n",
+    "– Millones/Millones: 3750\n",
+    "– Acciones/Stocks: 3250\n",
+    "– Ventas/Sales: 3000\n",
+    "– Año/Year: 2750\n",
+    "• Categorías:\n",
+    "– Términos fnancieros: millones, acciones, ventas\n",
+    "– Entidades: compañía, corporación\n",
+    "– Temporal: año, trimestre\n",
+    "– Económicos: crecimiento, mercado\n",
+    "Implicaciones:\n",
+    "– Contenido claramente fnanciero/corporativo\n",
+    "– Vocabulario especializado en análisis bursátil\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "2dfc2ae7",
@@ -141,6 +248,34 @@
     "sns.barplot(x=[w[1] for w in most_common], y=[w[0] for w in most_common])\n",
     "plt.title(\"20 palabras más frecuentes en noticias positivas\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce63cf46",
+   "metadata": {},
+   "source": [
+    "Gráfca 5: Word Cloud ”Nube de palabras”\n",
+    "Características:\n",
+    "• Tipo: Nube de palabras (Word Cloud)\n",
+    "• Tamaño de palabras: Proporcional a frecuencia\n",
+    "• Distribución: Aleatoria horizontal/vertical\n",
+    "• Propósito: Visualización intuitiva de términos clave\n",
+    "Análisis detallado:\n",
+    "• Términos prominentes:\n",
+    "– Más grandes: company, million, shares, sales, year\n",
+    "– Tamaño medio: growth, market, quarter, business, new\n",
+    "– Más pequeños: price, earnings, revenue, billion, plan\n",
+    "3\n",
+    "• Temas identifcados:\n",
+    "– Financiero: million, shares, earnings, revenue\n",
+    "– Corporativo: company, business, plan, executive\n",
+    "– Temporal: year, quarter, new\n",
+    "– Desempeño: growth, sales, market\n",
+    "• Ventajas:\n",
+    "– Identifcación rápida de temas principales\n",
+    "– Representación intuitiva de importancia relativa\n",
+    "– Confrmación del enfoque en noticias fnancieras\n"
    ]
   },
   {
