--- a/notebooks/01_etl.ipynb
+++ b/notebooks/01_etl.ipynb
@@ -196,6 +196,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f73c4f88",
+   "metadata": {},
+   "source": [
+    "Limpieza de datos\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "8a2a10ce",
@@ -391,6 +399,14 @@
     "# 6. Revisar cambios\n",
     "print(df.info())\n",
     "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dec1088f",
+   "metadata": {},
+   "source": [
+    "Cargar CSV del dataset para su posterior análisis"
    ]
   },
   {
